@@ -398,7 +398,7 @@ wait_for_auth({xmlstreamelement, El}, StateData) ->
 				?INFO_MSG(
 				  "(~w) Accepted legacy authentication for ~s",
 				  [StateData#state.socket,
-				    exmpp_jid:jid_to_string(JID)]),
+				    exmpp_jid:jid_to_list(JID)]),
 				SID = {now(), self()},
 				Conn = get_conn_type(StateData),
 				Info = [{ip, StateData#state.ip}, {conn, Conn},
@@ -435,7 +435,7 @@ wait_for_auth({xmlstreamelement, El}, StateData) ->
 				?INFO_MSG(
 				  "(~w) Failed legacy authentication for ~s",
 				  [StateData#state.socket,
-				    exmpp_jid:jid_to_string(JID)]),
+				    exmpp_jid:jid_to_list(JID)]),
 				Res = exmpp_iq:error_without_original(El,
                                   'not-authorized'),
 				send_element(StateData, Res),
@@ -445,7 +445,7 @@ wait_for_auth({xmlstreamelement, El}, StateData) ->
 			?INFO_MSG(
 			  "(~w) Forbidden legacy authentication for ~s",
 			  [StateData#state.socket,
-			    exmpp_jid:jid_to_string(JID)]),
+			    exmpp_jid:jid_to_list(JID)]),
 			Res = exmpp_iq:error_without_original(El,
                           'not-allowed'),
 			send_element(StateData, Res),
@@ -713,7 +713,7 @@ wait_for_session({xmlstreamelement, El}, StateData) ->
 	    allow ->
 		?INFO_MSG("(~w) Opened session for ~s",
 			  [StateData#state.socket,
-			   exmpp_jid:jid_to_string(JID)]),
+			   exmpp_jid:jid_to_list(JID)]),
 		SID = {now(), self()},
 		Conn = get_conn_type(StateData),
 		Info = [{ip, StateData#state.ip}, {conn, Conn},
@@ -750,7 +750,7 @@ wait_for_session({xmlstreamelement, El}, StateData) ->
 				   StateData#state.server, [JIDOld]),
 		?INFO_MSG("(~w) Forbidden session for ~s",
 			  [StateData#state.socket,
-			   exmpp_jid:jid_to_string(JID)]),
+			   exmpp_jid:jid_to_list(JID)]),
 		Err = exmpp_server_session:error(El, 'not-allowed'),
 		send_element(StateData, Err),
 		fsm_next_state(wait_for_session, StateData)
@@ -787,7 +787,7 @@ session_established({xmlstreamelement, El}, StateData) ->
 		    undefined ->
 			exmpp_jid:make_bare_jid(User, Server);
 		    _ ->
-			exmpp_jid:string_to_jid(To)
+			exmpp_jid:list_to_jid(To)
 		end,
 	NewEl = case exmpp_stanza:get_lang(El) of
 		    undefined ->
@@ -1237,7 +1237,7 @@ terminate(_Reason, StateName, StateData) ->
 		replaced ->
 		    ?INFO_MSG("(~w) Replaced session for ~s",
 			      [StateData#state.socket,
-			       exmpp_jid:jid_to_string(StateData#state.jid)]),
+			       exmpp_jid:jid_to_list(StateData#state.jid)]),
 		    From = StateData#state.jid,
 		    Packet = exmpp_presence:unavailable(),
 		    Packet1 = exmpp_presence:set_status(Packet,
@@ -1255,7 +1255,7 @@ terminate(_Reason, StateName, StateData) ->
 		_ ->
 		    ?INFO_MSG("(~w) Close session for ~s",
 			      [StateData#state.socket,
-			       exmpp_jid:jid_to_string(StateData#state.jid)]),
+			       exmpp_jid:jid_to_list(StateData#state.jid)]),
 
 		    EmptySet = ?SETS:new(),
 		    case StateData of
