@@ -303,7 +303,7 @@ set_vcard(User, LServer, VCARD) ->
 	 #xmlel{ns = ?NS_DATA_FORMS, name = 'x', attrs =
 	   [#xmlattr{name = 'type', value = "form"}], children =
 	   [#xmlel{ns = ?NS_DATA_FORMS, name = 'title', children =
-	       [#xmlcdata{cdata = list_to_binary(translate:translate(Lang, "Search users in ") ++ exmpp_jid:jid_to_string(JID))}]},
+	       [#xmlcdata{cdata = list_to_binary(translate:translate(Lang, "Search users in ") ++ exmpp_jid:jid_to_list(JID))}]},
 	    #xmlel{ns = ?NS_SEARCH, name = 'instructions', children =
 	       [#xmlcdata{cdata = list_to_binary(translate:translate(Lang,
 		       "Fill in the form to search "
@@ -459,7 +459,7 @@ search_result(Lang, JID, ServerHost, Data) ->
     [#xmlel{ns = ?NS_DATA_FORMS, name = 'title', children =
 	[#xmlcdata{cdata = list_to_binary(
 	      translate:translate(Lang, "Search Results for ") ++
-	      exmpp_jid:jid_to_string(JID))}]},
+	      exmpp_jid:jid_to_list(JID))}]},
      #xmlel{ns = ?NS_DATA_FORMS, name = 'reported', children =
       [?TLFIELD("text-single", "Jabber ID", "jid"),
        ?TLFIELD("text-single", "Full Name", "fn"),
